# nuhoot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: photo_metadata.json
docker/: Dockerfile  Dockerfile.gosom
docs/: ATTRIBUTIONS.md  PHOTO_INTELLIGENCE_PLAN.md  foss-component-research.md  professional-design-research.md
docs/research/: free-gpu-options.md  photo-compositing-architecture.md  saudi-engagement-research.md  stock-photo-and-ai-image-research.md  zero-marginal-cost-graphics-infrastructure.md  zero-marginal-cost-video-infrastructure.md
eagle-eye/: niche_config.py  parallel_dramatic.py  photo_compositor.py  photo_db.py  photo_enhancer.py  pipeline_v2.py  pipeline_v3.py  reels_generator.py
remotion/: captions.json  package-lock.json  package.json  render-v2.sh  tsconfig.json
remotion/src/: DynamicComposer.tsx  NuhootPost.tsx  Root.tsx  TestDramatic.tsx
remotion/src/components/: badges.tsx  buttons-pro.tsx  content.tsx  countdown.tsx  counters.tsx  ctas.tsx  footers.tsx  (+17 more)
src/nuhoot/: config.py  database.py  main.py  translations.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/unit/: test_business_model.py  test_businesses_api.py  test_campaigns_api.py  test_config.py  test_content_matcher.py  test_crafter.py  test_dashboard.py  test_finder.py  test_health.py  test_investigator.py  test_phone.py  test_renderer.py  test_sender.py  test_sender_api.py
video-engine/: package-lock.json  package.json  server.js
(+49 files in other folders)
